# rubricon

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pnpm-lock.yaml  pnpm-workspace.yaml  record_demo.sh
backend/: pyproject.toml
backend/examples/: research_agent_suite.yaml
backend/rubricon/: agent.py  api.py  cli.py  engine.py  judge.py  loader.py  models.py  schema.py  storage.py
backend/rubricon/prompts/: judge_v1.py
backend/tests/: test_api.py  test_engine.py  test_judge.py  test_loader.py  test_models.py  test_storage.py
backend/tests/snapshots/: judge_prompt_v1.txt
dashboard/: package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/compare/: page.tsx
dashboard/src/app/runs/: page.tsx
dashboard/src/app/runs/[runId]/: page.tsx
dashboard/src/app/runs/[runId]/scenarios/[scenarioId]/: page.tsx
dashboard/src/app/suites/: page.tsx
dashboard/src/components/: CompareView.tsx  RunsListClient.tsx  ScenarioDetailClient.tsx  TrajectoryTimeline.tsx
dashboard/src/lib/: api.ts
