[project]
name = "rubricon"
version = "0.1.0"
description = "Rubric-based evaluation harness for AI agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "rich>=13.7",
]

[project.scripts]
rubricon = "rubricon.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.27",
]
